# blog-FastAPI_pet

./: .env_example  .gitignore  aws_bucket_policy.json  aws_iam_policy.json  docker-compose.tests.yml  docker-compose.yml  dockerfile  dockerfile.tests  main.py  pyproject.toml  readme.txt
templates/: layout.html
tests/: conftest.py
