[project]
name = "fastapi-uv-docker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "aiosmtplib>=5.1.0",
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "boto3>=1.42.91",
  "fastapi[standard]>=0.128.0",
  "greenlet>=3.3.1",
  "pillow>=12.1.1",
  "psycopg[binary]>=3.3.3",
  "pwdlib[argon2]>=0.3.0",
  "pydantic-settings>=2.12.0",
  "pyjwt>=2.11.0",
  "sqlalchemy>=2.0.46",
  "uvicorn[standard]>=0.27",
]

[tool.uv]
